# latam-devsecops-sre-challenge

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: cicd.yaml
app/: config.json  main.py  requirements.txt
cloud_functions/api_to_pubsub/: config.json  main.py  requeriments.txt
cloud_functions/pubsub_to_bigquery/: config.json  main.py  requeriments.txt
terraform/: README.md  main.tf  outputs.tf  provider.tf  terraform.tfvars  variables.tf  version.tf
terraform/bigquery_schemas/: currency_exchange_rate_schema.json
terraform/modules/bigquery_dataset/: main.tf  outputs.tf  variables.tf
terraform/modules/bigquery_table/: main.tf  outputs.tf  variables.tf
